--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   },
   "homepage": "https://github.com/Wintrhop/Arbnb-Back#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "mongoose": "^6.6.1"
   },
   "devDependencies": {
     "dotenv": "^16.0.2",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.20"
   }
 }
