--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGO_URI=mongodb+srv://admin:xLg4FxQiBSEqz7Uq@cluster0.zw0fhim.mongodb.net/airbnb?retryWrites=true&w=majority
 PORT= 8080
+SECRET_KEY=secret_key
